# cmake_dummy

./: CMakeLists.txt
DemoA/: CMakeLists.txt
DemoA/src/: main_boost_thread.cpp  main_demoA.cpp
DemoB/: CMakeLists.txt
DemoB/src/: main_demoB.cpp
LibA/: CMakeLists.txt
LibA/src/: ClassA.cpp
include/LibA/: ClassA.h
